--- a/bin/App.config
+++ b/bin/App.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
-    <connectionStrings>  
-     <add name="fileFormat" connectionString=".txt">
-      <add name="WingtipToys" connectionString="Data Source=(LocalDB)\v11.0;Initial Catalog=WingtipToys;Integrated Security=True;Pooling=False" />  
-    </connectionStrings> 
+    <appSettings>
+        <add key="fileFormat" value=".txt"/>
+    </appSettings>
 </configuration>
