Uploded contents are succesfully converted into PDF and TEXT format

--- a/App.config
+++ b/App.config
@@ -8,6 +8,7 @@
   <appSettings>
     <add key="SupportingFileType" value=".txt"/>
        <add key="SupportingFileTxtFilter" value="Text documents (.txt)|*.txt"/>
+       <add key="SupportingFilePDFFilter" value="(*.pdf)|*.pdf"/>
        <add key="ApplicationName" value="ExFile Manager Application"/>
   </appSettings>
 
