upload the selected txt file to a FTP server using ftp client

--- a/App.config
+++ b/App.config
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-
   <connectionStrings>
     <add name="AppConnectionString" connectionString="YourCS"/>
   </connectionStrings>
-
   <appSettings>
     <add key="SupportingFileType" value=".txt"/>
-       <add key="SupportingFileTxtFilter" value="Text documents (.txt)|*.txt"/>
-       <add key="SupportingFilePDFFilter" value="(*.pdf)|*.pdf"/>
-       <add key="ApplicationName" value="ExFile Manager Application"/>
+    <add key="SupportingFileTxtFilter" value="Text documents (.txt)|*.txt"/>
+    <add key="SupportingFilePDFFilter" value="(*.pdf)|*.pdf"/>
+    <add key="ApplicationName" value="ExFile Manager Application"/>
+    <add key="HostAddress" value="ftp://192.168.1.103"/>
+    <add key="UserId" value="test"/>
+    <add key="Password" value="1234"/>
   </appSettings>
-
 </configuration>
