Implement background worker for upload large file

--- a/App.config
+++ b/App.config
@@ -9,7 +9,9 @@
     <add key="SupportingFilePDFFilter" value="(*.pdf)|*.pdf"/>
     <add key="ApplicationName" value="ExFile Manager Application"/>
     <add key="HostAddress" value="ftp://192.168.1.103"/>
-    <add key="UserId" value="test"/>
+    <!-- <add key="HostAddress" value="ftp://10.0.0.4"/> -->
+      <add key="UserId" value="test"/>
     <add key="Password" value="1234"/>
+ 
   </appSettings>
 </configuration>
