--- a/MVVMFileMange.csproj
+++ b/MVVMFileMange.csproj
@@ -5,6 +5,7 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Cryptlex.LexActivator" Version="3.12.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
   </ItemGroup>
 </Project>
