new popup window created

--- a/App.config
+++ b/App.config
@@ -8,10 +8,13 @@
     <add key="SupportingFileTxtFilter" value="Text documents (.txt)|*.txt"/>
     <add key="SupportingFilePDFFilter" value="(*.pdf)|*.pdf"/>
     <add key="ApplicationName" value="ExFile Manager Application"/>
-    <add key="HostAddress" value="ftp://192.168.1.103"/>
-    <!-- <add key="HostAddress" value="ftp://10.0.0.4"/> -->
-      <add key="UserId" value="test"/>
-    <add key="Password" value="1234"/>
+    <!--<add key="HostAddress" value="ftp://192.168.1.103"/>-->
+	  <add key="HostAddress" value="62.232.70.202"/>
+	 
+	  <!-- <add key="HostAddress" value="ftp://10.0.0.4"/> -->
+      <add key="UserId" value="MAP\test.1"/>
+    <add key="Password" value="Qwerty2016!!"/>
+	  <add key="port" value="2222"/>
  
   </appSettings>
 </configuration>
