sftp server watcher implemented

--- a/App.config
+++ b/App.config
@@ -14,7 +14,9 @@
 	  <!-- <add key="HostAddress" value="ftp://10.0.0.4"/> -->
       <add key="UserId" value="MAP\test.1"/>
     <add key="Password" value="Qwerty2016!!"/>
-	  <add key="port" value="2222"/>
- 
+	  <add key="Port" value="2222"/>
+	  <add key="ResultRemotePath" value="MAP/test.1/TestResults"/>
+	 <!--<add key ="resultLocalPath" value=""-->
+
   </appSettings>
 </configuration>
