--- a/MVVMFileMange.csproj
+++ b/MVVMFileMange.csproj
@@ -7,5 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Cryptlex.LexActivator" Version="3.12.0" />
     <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
+    <PackageReference Include="SSH.NET" Version="2020.0.0" />
+    <PackageReference Include="WinSCP" Version="5.17.9" />
   </ItemGroup>
 </Project>
